[gd_scene load_steps=10 format=3 uid="uid://bvgh060edrp7j"]

[ext_resource type="Script" path="res://src/MainMenu/MainMenu.gd" id="1"]
[ext_resource type="Shader" path="res://src/MainMenu/MainMenu.gdshader" id="1_n68hi"]
[ext_resource type="Texture2D" uid="uid://c21gb7uyapkgl" path="res://assets/sprites/menu/menu_1.png" id="2_2ifgq"]
[ext_resource type="Texture2D" uid="uid://2kptultn4vpa" path="res://assets/sprites/menu/menu_2.png" id="3_0irou"]
[ext_resource type="Texture2D" uid="uid://frvnd6c4gux8" path="res://assets/sprites/menu/menu_3.png" id="4_7oim0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x8723"]
shader = ExtResource("1_n68hi")

[sub_resource type="Animation" id="Animation_03crc"]
resource_name = "cloud"
length = 180.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 89.9333, 89.9667, 90, 90.0333, 180),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1920, 0), Vector2(1920, 0), Vector2(-1920, 0), Vector2(-1920, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_baajc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_13brg"]
_data = {
"RESET": SubResource("Animation_baajc"),
"cloud": SubResource("Animation_03crc")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2ifgq")
expand_mode = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_0irou")
centered = false

[node name="TextureRect3" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_7oim0")
expand_mode = 1

[node name="effect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_x8723")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_7oim0")
expand_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "LD-Base"

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Start" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="SelectLevel" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Select level"

[node name="Credits" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_13brg")
}
speed_scale = 0.25

[connection signal="pressed" from="CenterContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SelectLevel" to="." method="_on_select_level_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
